drkns 15.11.2020 10:16:18 +0000 - build 5703

1. Уточнение работы запускателя.

drkns 14.11.2020 22:00:22 +0000 - build 5702

1. Экспериментально: переделан и упрощен запускатель (по мотивам https://forum.farmanager.com/viewtopic.php?t=12275):
   - Поиск запускаемого не производится - ОС видней.
   - System.Executor.UseAppPath и System.Executor.FullTitle больше нет.
   - Обработка ассоциаций отключена по умолчанию. Включается по System.Executor.UseAssociations = true.

2. Рефакторинг.

yjh 14.11.2020 21:21:30 +0300 - build 5701

1. Добавляем .msi к маске <arc>

drkns 11.11.2020 19:38:14 +0000 - build 5700

1. Уточнение 5698.1 еще раз.

drkns 08.11.2020 19:45:32 +0000 - build 5699

1. Уточнение 5698.1.

drkns 05.11.2020 19:04:14 +0000 - build 5698

1. Экспериментально: уменьшим количество параметров запускателя.

2. В информацию об исключении добавлен список загруженных модулей.

drkns 03.11.2020 15:55:05 +0000 - build 5697

1. В некоторых случаях не читались некоторые данные из реестра.

2. Уточнение работы запускателя.

drkns 28.10.2020 00:18:12 +0000 - build 5696

1. В некоторых случаях плагинам отдавались указатели на внутренние данные.

drkns 27.10.2020 20:48:41 +0000 - build 5695

1. С форума: если FarGetPluginPanelItem::Size меньше требуемого размера, то FCTL_GETPANELITEM заполнит столько, сколько возможно.

drkns 27.10.2020 00:25:27 +0000 - build 5694

1. 0003821 / gh-279: Redundant ampersand in the "Group of file masks" dialog title.

drkns 26.10.2020 20:48:46 +0000 - build 5693

1. Новые версии fmt, tinyxml2, Catch2.

drkns 26.10.2020 18:02:12 +0000 - build 5692

1. С форума: 5688 подвисает в меню дисков, если сетевой диск не доступен.

drkns 26.10.2020 02:03:19 +0000 - build 5691

1. Уточнение 5683.

drkns 25.10.2020 20:54:39 +0000 - build 5690

1. 0003818: Бесконечный перезапуск .cmd батчей через double-click и попытке выхода через Ctrl-Break

drkns 25.10.2020 05:30:03 +0000 - build 5689

1. Fix clang build & warnings.
