@@ -62,9 +62,8 @@ public:
 bool SubstFileName(
 	string &Str,
 	const subst_context& Context,
-	delayed_deleter* ListNames = nullptr,
-	bool* PreserveLongName = nullptr,
-	bool IgnoreInput = false,
+	bool* PreserveLongName = {},
+	bool IgnoreInputAndLists = false,
 	string_view DlgTitle = {},
 	bool EscapeAmpersands = false
 );
