@@ -1,3 +1,7 @@
+drkns 15.11.2020 22:37:26 +0000 - build 5704
+
+1. Увеличена задержка удаления временных файлов, создаваемых по !@!.
+
 drkns 15.11.2020 10:16:18 +0000 - build 5703
 
 1. Уточнение работы запускателя.
